tests/paczka1/fuzzy1/75976828.err
Error in line 6: fgD8MuS9 S711 92,4
Error in line 8: fgD8MuS9 A512 82,6
Error in line 9: fgD8MuS9 S711 30,4
Error in line 11: fgD8MuS9 S292 66,8
Error in line 19: fHOfR S292 19,4
Error in line 13: fgD8MuS9 A512 26,6
Error in line 34: tfmLwYlW A512 53,9
Error in line 24: BoxK S292 22,7
